--- a/public/navigation/chatbox.html
+++ b/public/navigation/chatbox.html
@@ -221,7 +221,7 @@
                         </div>
                     </div>
                     <div class="chatbox__bottom__send">
-                        <ion-icon name="send"></ion-icon>
+                        <ion-icon class="send" name="send"></ion-icon>
                     </div>
                 </div>
 
