--- a/public/navigation/wheyshop_checkout.html
+++ b/public/navigation/wheyshop_checkout.html
@@ -62,7 +62,7 @@
                                     </span>
                                 </button>
                             </div>
-                            <div class="cart">
+                            <div class="cart" style="display: none;">
                                 <button class="cart-button">
                                     <ion-icon name="cart-outline"></ion-icon>
                                 </button>
