--- a/public/navigation/wheyshop_tracking.html
+++ b/public/navigation/wheyshop_tracking.html
@@ -154,34 +154,34 @@
             <div class="tracking">
                 <div class="tracking-wrapper">
                     <div class="tag-status">
-                        <div class="tag-status-wrapper">
-                            <div class="tag active">
-                                <div class="tag-wrapper active">
-                                    <div class="title">
-                                        Tất cả đơn hàng
-                                    </div>
+                        <!-- <div class="tag tag-none">
+                                <div class="title title2">
+                                </div>
+                            </div> -->
+                        <div class="tag">
+                            <div class="title">
+                                Đang giao
+                            </div>
+                        </div>
+                        <div class="tag tag1">
+                            <div class="title title1">
+                                Đang giao
+                            </div>
+                        </div>
+                        <div class="tagbox tagbox3">
+                            <div class="tag tag3">
+                                <div class="title title3">
+                                    Đang giao
                                 </div>
                             </div>
-                            <div class="tag">
-                                <div class="tag-wrapper">
-                                    <div class="title">
-                                        Đã huỷ
-                                    </div>
-                                </div>
+                        </div>
+                        <div class="tag tag2">
+                            <div class="title title2">
+                                Đang giao
                             </div>
-                            <div class="tag">
-                                <div class="tag-wrapper">
-                                    <div class="title">
-                                        Đang giao
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tag">
-                                <div class="tag-wrapper">
-                                    <div class="title">
-                                        Hoàn thành
-                                    </div>
-                                </div>
+                        </div>
+                        <div class="tag tag-none">
+                            <div class="title">
                             </div>
                         </div>
                     </div>
