--- a/public/navigation/wheyshop_tracking.html
+++ b/public/navigation/wheyshop_tracking.html
@@ -167,7 +167,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="tagbox">
+                        <div class="tagbox tagbox2">
                             <div class="tag tag2">
                                 <div class="title title2">
                                     Đã hủy
