add tracking order

--- a/public/navigation/1wheyshop_tracking.html
+++ b/public/navigation/1wheyshop_tracking.html
@@ -153,33 +153,139 @@
         <div class="container-wrapper">
             <div class="tracking">
                 <div class="tracking-wrapper">
-                    <div class="tag-status">
-                        <div class="tag-status-wrapper">
-                            <div class="tag active">
-                                <div class="tag-wrapper active">
-                                    <div class="title">
-                                        Tất cả đơn hàng
+                    <div class="tab-status">
+                        <div class="tab-status-wrapper">
+                            <button class="close">
+                                <i class="fa-solid fa-xmark"></i>
+                            </button>
+                            <div class="tab-account">
+                                <div class="user-account">
+                                    <div class="user-account-img">
+                                        <img src="../img/icon/avatar.png" alt="">
+                                    </div>
+                                    <div class="user-account-information">
+                                        <div class="user-account-name">
+                                            example
+                                        </div>
+                                        <div class="user-account-edit">
+                                            <i class="fa-regular fa-pen-to-square"></i>
+                                            <span>Sửa thông tin</span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="tag">
-                                <div class="tag-wrapper">
-                                    <div class="title">
-                                        Đã huỷ
-                                    </div>
-                                </div>
+                            <div class="tab">
+                                <button class="">
+                                    <img src="../img/shop/icon/user.png" alt="">
+                                    <div class="text">Tài khoản của tôi</div>
+                                </button>
                             </div>
-                            <div class="tag">
-                                <div class="tag-wrapper">
-                                    <div class="title">
-                                        Đang giao
-                                    </div>
-                                </div>
+                            <div class="tab">
+                                <button class="active">
+                                    <img src="../img/shop/icon/product.png" alt="">
+                                    <div class="text">Tất cả đơn hàng</div>
+                                </button>
                             </div>
-                            <div class="tag">
-                                <div class="tag-wrapper">
-                                    <div class="title">
-                                        Hoàn thành
+                            <div class="tab">
+                                <button>
+                                    <img src="../img/shop/icon/cancelled.png" alt="">
+                                    <div class="text">Đơn hàng huỷ</div>
+                                </button>
+                            </div>
+                            <div class="tab">
+                                <button>
+                                    <img src="../img/shop/icon/delivery-truck.png" alt="">
+                                    <div class="text">Đang vận chuyển</div>
+                                </button>
+                            </div>
+                            <div class="tab">
+                                <button>
+                                    <img src="../img/shop/icon/task-actions.png" alt="">
+                                    <div class="text">Giao thành công</div>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-content">
+                        <div class="tab-content-wrapper">
+                            <div class="content active">
+                                <div class="title">
+                                    <button class="open">
+                                        <i class="fa-solid fa-bars"></i>
+                                    </button>
+                                    Tất cả đơn hàng
+                                </div>
+                                <div class="list-order">
+                                    <div class="list-order-wrapper">
+                                        <div class="order">
+                                            <div class="order-wrapper">
+                                                <div class="header-order">
+                                                    <div class="brand-offical">
+                                                        <div class="brand-offical-logo">
+                                                            <img class="check-icon" src="../img/shop/icon/checklist.png" alt="">
+                                                            <span>
+                                                                OFFICAL
+                                                            </span>
+                                                        </div>
+                                                        <div class="brand-name">
+                                                            WHEZ
+                                                        </div>
+                                                    </div>
+                                                    <div class="status-order">
+                                                        Hoàn thành
+                                                    </div>
+                                                </div>
+                                                <div class="first-product">
+                                                    <div class="first-product-img">
+                                                        <img src="../img/shop/whey/100-whey-gold-standard-5lbs-2-3kg-13-2x.webp"
+                                                            alt="">
+                                                    </div>
+                                                    <div class="first-product-information">
+                                                        <div class="information-group">
+                                                            <div class="first-product-name">
+                                                                100% Whey Gold Standard 5Lbs (2.3kg)
+                                                            </div>
+                                                            <div class="first-product-quantity">
+                                                                Số lượng:
+                                                                <span>
+                                                                    1
+                                                                </span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="first-product-price">
+                                                            60,000
+                                                            <span>
+                                                                ₫
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="total">
+                                                    <div class="total-products">
+                                                        <span>
+                                                            100
+                                                        </span>
+                                                        sản phẩm
+                                                    </div>
+                                                    <div class="total-price">
+                                                        <img src="../img/shop/icon/shield.png" alt="">
+                                                        Thành tiền:
+                                                        <span>
+                                                            1,650,000
+                                                            <span>
+                                                                ₫
+                                                            </span>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div> -->
                                     </div>
                                 </div>
                             </div>
