--- a/public/navigation/wheyshop.html
+++ b/public/navigation/wheyshop.html
@@ -77,7 +77,7 @@
                                             Giỏ hàng
                                         </div>
                                         <div class="list-items">
-                                            <!-- <div class="item-in-cart">
+                                            <div class="item-in-cart">
                                                 <div class="item-img">
                                                     <img src="../img/shop/whey/100-whey-gold-standard-5lbs-2-3kg-13-2x.webp"
                                                         alt="">
@@ -103,12 +103,15 @@
                                                             ₫
                                                         </span>
                                                     </div>
+                                                    <button class="item-delete">
+                                                        <i class="fa-solid fa-trash-can"></i>
+                                                    </button>
                                                 </div>
                                             </div>
                                             <div class="item-in-cart"></div>
                                             <div class="item-in-cart"></div>
                                             <div class="item-in-cart"></div>
-                                            <div class="item-in-cart"></div> -->
+                                            <div class="item-in-cart"></div>
                                         </div>
                                         <div class="total">
                                             Tổng
@@ -2833,7 +2836,7 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="module" src="../navigation_javascript/wheyshop.js"></script>
-    <script type="module" src="../src/client.js"></script>
+    <!-- <script type="module" src="../src/client.js"></script> -->
     <script>
 
 
